--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 </head>
 
 <body>
-    <p>
-        <h1>Hello GitHub</h1>
-    </p>
-    <p>
-        <h2>屏東科技大學資管系-B11056038李俊彥</h2>
-    </p>
+    <h1>Hello GitHub</h1>
+    屏東科技大學資管系-B11056038李俊彥
 </body>
 
 </html>
